<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DailyActivityFragment">

    <TextView
        android:id="@+id/daily_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:textSize="16sp"
        android:textColor="@color/dark_gray"
        android:text="@string/daily_goal_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/daily_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:text="@string/daily_goal_text"
        app:layout_constraintTop_toBottomOf="@+id/daily_goal_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/transparent_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/daily_goal_text"
        />

    <TextView
        android:id="@+id/weekly_progress_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/dark_gray"
        android:text="@string/weekly_progress_title"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/weekly_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:text="@string/set_realistic_goals_text"
        app:layout_constraintTop_toBottomOf="@+id/weekly_progress_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/timeline_button"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_timeline_button"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/activity_indicator"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/blue_indicator_drawable"
        app:layout_constraintTop_toTopOf="@+id/activity_indicator_text"
        app:layout_constraintBottom_toBottomOf="@+id/activity_indicator_text"
        app:layout_constraintEnd_toStartOf="@+id/activity_indicator_text"
        />

    <TextView
        android:id="@+id/activity_indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textSize="10sp"
        android:text="@string/activity_indicator_text"
        app:layout_constraintTop_toBottomOf="@+id/timeline_button"
        app:layout_constraintEnd_toStartOf="@id/goal_indicator"/>

    <ImageView
        android:id="@+id/goal_indicator"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/green_indicator_drawable"
        app:layout_constraintTop_toTopOf="@+id/goal_indicator_text"
        app:layout_constraintBottom_toBottomOf="@+id/goal_indicator_text"
        app:layout_constraintEnd_toStartOf="@+id/goal_indicator_text"
        />

    <TextView
        android:id="@+id/goal_indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:textSize="10sp"
        android:text="@string/daily_goal_indicator_text"
        app:layout_constraintTop_toBottomOf="@+id/timeline_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:trackCornerRadius="5dp"
        app:trackColor="@color/light_gray_2"
        app:indicatorColor="@color/blue"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_indicator_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/progress_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_daily_progress"
        app:layout_constraintTop_toBottomOf="@+id/weekly_progress_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>